all pages added to the navbar

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 </head>
 <body>
  <header>
-  <h1>Star Wars Browser</h1>	
+  <h1>Star Wars Browser</h1>
+  <nav>
+  	<ul></ul>
+  </nav>	
  </header>
  <main role="main"></main>
  <footer>
-  <p>Developed with 💙 in Berlin, <a href="https://swapi.co/" target="_blank">Star Wars open API</a>.
-</p>	
+  <p>Developed with 💙 in Berlin, <a href="https://swapi.co/" target="_blank">Star Wars open API</a>
+  </p>	
  </footer>
  <script type="text/javascript" src="index.js"></script>
 </body>
